Eg anar ikkje kva alt dette er.

--- a/Fastvare.X/nbproject/Makefile-genesis.properties
+++ b/Fastvare.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Tue Mar 12 14:06:56 CET 2024
+#Wed Mar 13 13:17:57 CET 2024
 default.languagetoolchain.version=1.00
-default.Pack.dfplocation=/opt/microchip/mplabx/v6.15/packs/Microchip/AVR-Dx_DFP/2.3.272
-default.com-microchip-mplab-nbide-toolchain-avr-AVRLanguageToolchain.md5=15d362884ef2f2cc2aef91ad271ba086
+default.Pack.dfplocation=
+default.com-microchip-mplab-nbide-toolchain-avr-AVRLanguageToolchain.md5=d2326bf6869b96f43e381b4466c214be
 conf.ids=default
 default.languagetoolchain.dir=/usr/bin
-host.id=2ncq-btgd-ca
+host.id=1j2b-acyw-er
 default.platformTool.md5=null
-configurations-xml=5f4f40a6fb54e2c4cc98594ed414131d
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
-proj.dir=/home/steinar/Documents/Ovinger-V24/uCSys/IELET2111-Mikrokontrollersystemer-Prosjekt/Fastvare.X
+configurations-xml=aae8c576d79f68b583ab1969a7934857
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
+proj.dir=/home/sivert/Dokument/mikro/prosjekt/Fastvare.X
 host.platform=linux
