--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,32 @@
-/Fastvare.X/build/
-/Fastvare.X/dist/
+# .gitignore file
+#
+# Set up for Microchip/MPLAB X development
+#
+# John Haroian
+# Greg Mrozek
+#
+# Updated January 18, 2023
+
+# MPLAB X IDE (Netbeans) specific
+
+# Hentet fra: https://github.com/jharoian-mchp/MPLAB-X-gitignore/blob/main/.gitignore
+
+**/*.X/~*.*
+**/*.X/build/
+**/*.X/debug/
+**/*.X/dist/
+**/*.X/disassembly/
+**/*.X/.generated_files/
+**/*.X/nbproject/private/
+**/*.X/nbproject/*.mk
+**/*.X/nbproject/*.bash
+**/*.X/nbproject/Makefile-genesis.properties
+**/*.X/queuelogs/
+
+# MCC specific
+**/*.X/*mc3.bak*
+
+# Large Files
+*.exe
+*.zip
+*.pdf
